--- a/templates/home.html
+++ b/templates/home.html
@@ -3,15 +3,56 @@
   <head>
     <title>Career's Page</title>
     <link rel="icon" type="image/x-icon" href="https://flask.palletsprojects.com/en/2.2.x/_static/flask-icon.png">
+    <style>
+      body {
+        margin: 0;
+      }
+      h1 {
+        margin: 0;
+        text-align: center;
+        background-color: rgba(214,116,157,0.25);
+        color: white;
+        padding: 10px;
+        font-size: 42px;
+        font-family: 'Golos Text', sans-serif;
+        position: absolute;
+        width: 100%;
+      }
+      #banner{
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+        object-position: 50% 75%;
+      }
+      .content-container{
+        max-width: 50%;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      h2 {
+        text-align: center;
+        color: grey;
+        font-size: 34px;
+        font-family: 'Golos Text', sans-serif;
+        font-weight: 500;
+      }
+      p{
+        text-align: center;
+        font-family: 'Golos Text', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <h1>Custom Careers</h1>
-    <img src="./static/banner.webp" alt="banner image" height="320"/>
+    <img id="banner" src="./static/banner.jpg" alt="banner image"/>
     <h2>About Custom</h2>
-    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+    <div class="content-container">
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa   quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
     </p>
     <h2>Open Positions</h2>
     <p>JOB LIST GOES HERE</p>
     <button>Contact Us</button>
+    <p>Copyright 2023, Custom</p>
+    </div>
   </body>
 </html>
