--- a/templates/home.html
+++ b/templates/home.html
@@ -1,58 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Career's Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{company}} Career's Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="https://flask.palletsprojects.com/en/2.2.x/_static/flask-icon.png">
     <style>
-      body {
-        margin: 0;
-      }
-      h1 {
-        margin: 0;
-        text-align: center;
-        background-color: rgba(214,116,157,0.25);
-        color: white;
-        padding: 10px;
-        font-size: 42px;
-        font-family: 'Golos Text', sans-serif;
-        position: absolute;
-        width: 100%;
-      }
       #banner{
+        height: 320px;
         width: 100%;
-        height: 400px;
         object-fit: cover;
-        object-position: 50% 75%;
-      }
-      .content-container{
-        max-width: 50%;
-        margin-right: auto;
-        margin-left: auto;
-      }
-      h2 {
-        text-align: center;
-        color: grey;
-        font-size: 34px;
-        font-family: 'Golos Text', sans-serif;
-        font-weight: 500;
-      }
-      p{
-        text-align: center;
-        font-family: 'Golos Text', sans-serif;
       }
     </style>
   </head>
   <body>
-    <h1>Custom Careers</h1>
-    <img id="banner" src="./static/banner.jpg" alt="banner image"/>
-    <h2>About Custom</h2>
-    <div class="content-container">
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa   quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-    </p>
-    <h2>Open Positions</h2>
-    <p>JOB LIST GOES HERE</p>
-    <button>Contact Us</button>
-    <p>Copyright 2023, Custom</p>
+    <div class="container">
+      <h1 class="mt-3 mb-3 text-center">{{company}} Careers</h1>
+      <img  class="img-fluid" id="banner" src="./static/banner.jpg" alt="banner image"/>
+      <h2 class="mt-4 text-center">About {{company}}</h2>
+      <p class="lead">{{desc}}</p>
+    <h2 class="mt-4">Open Positions</h2>
+    <div>
+      {% for job in jobs%}
+        {% include './components/jobitem.html' %}
+      {% endfor%}
+    </div>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-4">&copy Copyright 2023, {{company}}</p>
+      </div>
     </div>
   </body>
 </html>
