Fixed some styling

--- a/templates/components/jobitem.html
+++ b/templates/components/jobitem.html
@@ -1,4 +1,4 @@
-<div class="border-top mt-4 d-flex flex-row justify-content-start align-items-center">
+<div class="border-top mt-2 mb-2 d-flex flex-row justify-content-start align-items-center">
   <div>
     <h4 class="mb-0">{{job['title']}}</h4>
     <p class="mb-0">{{job['location']}}</p>
