--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
     </style>
   </head>
   <body>
+    {% include './components/header.html'%}
     <div class="container">
-      <h1 class="mt-3 mb-3 text-center">{{company}} Careers</h1>
       <img  class="img-fluid" id="banner" src="./static/banner.jpg" alt="banner image"/>
       <h2 class="mt-4 text-center">About {{company}}</h2>
       <p class="lead">{{desc}}</p>
