--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,13 +1,12 @@
-  <div class="container">
+  <div class="container fixed-top bg-white">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class="fs-4">{{company}} Careers</span>
       </a>
-
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
     </header>
-  </div>
+</div>
