--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,5 +1,5 @@
-  <div class="container fixed-top bg-white">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+  <div class="container-100 fixed-top bg-white">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 ps-3 pe-3 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class="fs-4">{{company}} Careers</span>
       </a>
