--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,14 @@
     <div class="container">
       <img  class="img-fluid" id="banner" src="./static/banner.jpg" alt="banner image"/>
       <h2 class="mt-4 text-center">About {{company}}</h2>
-      <p class="lead">{{desc}}</p>
+      <div class="row">
+        <div class="col-md-6">
+          <p class="lead">{{desc}}</p>
+        </div>
+        <div class="d-none d-md-block col-md-6">
+          <img src="./static/people-working.jpg" alt="people working" style="height:400px;"/>          
+        </div>
+      </div>
     <h2 class="mt-4">Open Positions</h2>
     <div>
       {% for job in jobs%}
