--- a/templates/components/jobitem.html
+++ b/templates/components/jobitem.html
@@ -3,5 +3,5 @@
     <h4 class="mb-0">{{job['title']}}</h4>
     <p class="mb-0">{{job['location']}}</p>
   </div>
-  <button type="button" class="btn btn-outline-primary ms-auto">Apply</button>
+  <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary ms-auto">Apply</a>
 </div>
