--- a/templates/job.html
+++ b/templates/job.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{job.id}} </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="https://flask.palletsprojects.com/en/2.2.x/_static/flask-icon.png">
-  </head>
-  <body>
+{% extends "layout.html" %}
+{% block head %}
+    <title>{{job.title}}</title>
+{% endblock %}
+{% block content %}
     <h3>Title</h3>
     <p>{{job.title}}</p>
     <h3>Location</h3>
@@ -18,5 +13,4 @@
     <p>{{job.responsibilities}}</p>
     <h3>Requirements</h3>
     <p>{{job.requirements}}</p>
-  </body>
-</html>
+{% endblock %}
