--- a/templates/job.html
+++ b/templates/job.html
@@ -3,14 +3,24 @@
     <title>{{job.title}}</title>
 {% endblock %}
 {% block content %}
-    <h3>Title</h3>
-    <p>{{job.title}}</p>
-    <h3>Location</h3>
-    <p>{{job.location}}</p>
-    <h3>Salary</h3>
-    <p>{{job.currency}}{{job.salary}}</p>
-    <h3>Responsibilities</h3>
-    <p>{{job.responsibilities}}</p>
-    <h3>Requirements</h3>
-    <p>{{job.requirements}}</p>
+    <div class="container">
+      {% include './components/banner.html' %}
+      <h2 class="mt-4 text-center">{{company}} Careers</h2>
+      <h3 class="mb-0">{{job.title}}</h3>
+      <p class="lead mt-0">{{job.location}}</p>
+      <h4>Responsibilities</h4>
+      <ul>
+        {% for line in job.responsibilities.split("\n")%}
+          <li>{{line}}</li>
+        {% endfor %}
+      </ul>
+      <h4>Requirements</h4>
+      <ul>
+        {% for line in job.requirements.split("\n")%}
+          <li>{{line}}</li>
+        {% endfor %}
+      </ul>
+      <h4>Salary</h4>
+      <p>{{job.currency}}{{job.salary}}</p>
+    </div>
 {% endblock %}
