Added application form for jobs

--- a/templates/job.html
+++ b/templates/job.html
@@ -22,5 +22,6 @@
       </ul>
       <h4>Salary</h4>
       <p>{{job.currency}}{{job.salary}}</p>
+      {% include './components/job_form.html' %}
     </div>
 {% endblock %}
