--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -3,11 +3,11 @@
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class="fs-4">{{company}} Careers</span>
       </a>
-      <ul class="nav nav-pills">
+<!--       <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-      </ul>
+      </ul> -->
     </header>
 </div>
 <div style="height:100px;"></div>
