Render Thank you page after filling out job form, post data provided by user to db

--- a/templates/application_submit.html
+++ b/templates/application_submit.html
@@ -3,9 +3,10 @@
     <title>Application Submitted</title>
 {% endblock %}
 {% block content %}
-    <div class="container min-vh-100 text-center">
+    <div class="container d-inline-block text-center">
 <!--       {% include './components/banner.html'%} -->
       <h1>Thank you for applying!</h1>
+      <h3 class="lead">Your application for {{job_title}} has been submitted.</h3>
       <h3 class="lead">Our recruiting team will reach out to you soon!</h3>
     </div>
 {% endblock %}
