--- a/templates/components/job_form.html
+++ b/templates/components/job_form.html
@@ -10,7 +10,7 @@
   </div>
   <div class="mb-2 form-group">
     <label>LinkedIn URL</label><br/>
-    <input class="form-control" type="text" name="linkedin" placeholder="https://linkedin.com/in/bobsmith"/>
+    <input class="form-control" type="text" name="linkedin_url" placeholder="https://linkedin.com/in/bobsmith"/>
   </div>
   <div class="mb-2 form-group">
     <label>Education</label><br/>
@@ -22,7 +22,7 @@
   </div>
   <div class="mb-2 form-group">
     <label>Resume URL</label><br/>
-    <input class="form-control" type="text" name="resume" placeholder="Enter URL"/>
+    <input class="form-control" type="text" name="resume_url" placeholder="Enter URL"/>
   </div>
     <input class="btn btn-primary" type="submit" name="submit"/>
 </form>
