--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     {% include './components/bootstrap_meta.html'%}
     {% block head %}{% endblock %}
   </head>
-  <body>
+  <body class="d-flex flex-column justify-content-between min-vh-100">
     {% include './components/header.html'%}
     {% block content %}{% endblock %}
     {% include './components/footer.html' %}
