Now connected to SQLite but having trouble doing INSERTIONS, need to figure it out

--- a/templates/components/job_form.html
+++ b/templates/components/job_form.html
@@ -1,5 +1,5 @@
 <h4>Submit Application</h4>
-<form action="/job/{{job['id']}}/apply" method="post">
+<form action="/job/{{job['job_id']}}/apply" method="post">
   <div class="mb-2 form-group">
     <label>Full Name</label><br/>
     <input class="form-control" type="text" name="full_name" placeholder="Bob Smith"/>    
